tests/test_assets/semantic/invalid/declarations/floating_constant_errors.cog
F32_LITERAL_OUT_OF_RANGE: f32 : 340282366920938463463374607431768211456.0;
