tests/test_assets/semantic/invalid/declarations/floating_constant_errors.expected
semantic error at line 1: constant floating-point value does not fit declared type
1 semantic error generated.
